--- a/client/stylesheets/app.css
+++ b/client/stylesheets/app.css
@@ -698,26 +698,30 @@ header {
 .priority-secondary .task-info {
   margin: 23px 0; }
 
-/* line 1, ../sass/modules/_drawer.scss */
+/* line 3, ../sass/modules/_drawer.scss */
 #projectsDrawer {
   position: fixed;
-  bottom: 0;
+  bottom: -40px;
   left: 0;
   width: 100%;
   color: white; }
-  /* line 8, ../sass/modules/_drawer.scss */
+  /* line 10, ../sass/modules/_drawer.scss */
   #projectsDrawer .tag {
     display: inline-block;
+    position: relative;
+    top: -40px;
     background: blue;
     height: 40px;
     line-height: 40px;
     width: 200px; }
-  /* line 16, ../sass/modules/_drawer.scss */
+  /* line 21, ../sass/modules/_drawer.scss */
   #projectsDrawer input {
     background: #3333ff; }
-  /* line 20, ../sass/modules/_drawer.scss */
+  /* line 25, ../sass/modules/_drawer.scss */
   #projectsDrawer .drawer {
     width: 100%;
+    position: relative;
+    top: -40px;
     background: blue;
     overflow-y: hidden;
     overflow-x: scroll;
@@ -725,13 +729,13 @@ header {
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out; }
-    /* line 28, ../sass/modules/_drawer.scss */
+    /* line 34, ../sass/modules/_drawer.scss */
     #projectsDrawer .drawer.open {
       height: 400px; }
-    /* line 31, ../sass/modules/_drawer.scss */
+    /* line 37, ../sass/modules/_drawer.scss */
     #projectsDrawer .drawer.closed {
       height: 0; }
-  /* line 36, ../sass/modules/_drawer.scss */
+  /* line 42, ../sass/modules/_drawer.scss */
   #projectsDrawer .project {
     width: 350px;
     margin-left: 20px;
@@ -739,7 +743,7 @@ header {
     height: 100%;
     vertical-align: top;
     position: relative; }
-  /* line 44, ../sass/modules/_drawer.scss */
+  /* line 50, ../sass/modules/_drawer.scss */
   #projectsDrawer .taskList {
     /*min-height: 200px;*/
     position: absolute;
@@ -747,7 +751,7 @@ header {
     bottom: 0;
     width: 100%;
     overflow-y: scroll; }
-  /* line 52, ../sass/modules/_drawer.scss */
+  /* line 58, ../sass/modules/_drawer.scss */
   #projectsDrawer .task {
     border-bottom: 1px solid white; }
 
